# MolekularDynamik

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  job.sh  submit_molsim_job.sh
.github/workflows/: ci.yml
cmake/modules/: doxygen.cmake
input/: eingabe-Argon-cooling.xml  eingabe-Argon-supercooling.xml  eingabe-Assignment3Task2.xml  eingabe-Membrane-3x3.xml  eingabe-Membrane-easy.xml  eingabe-PerformanceComparison.xml  eingabe-Rayleigh-Taylor-3D.xml  eingabe-argon-cooling.xml  eingabe-argon-supercooling.xml  eingabe-assign4-test1.xml  eingabe-assign4-test2.xml  eingabe-assign5-task5-fluid.xml  eingabe-assign5-task5.xml  eingabe-cube-periodic.xml  eingabe-cube.txt  eingabe-cube.xml  eingabe-cube2.xml  eingabe-disk.txt  eingabe-disk.xml  eingabe-equilibrium.xml  eingabe-sonne.xml  eingabe-sphere.xml  eingabe.xml  outputEquilibrium45.txt
src/: Boundary.cpp  Boundary.h  Calculations.cpp  Calculations.h  FileReader.cpp  FileReader.h  MolSim.cpp  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  ParticleGenerator.cpp  ParticleGenerator.h  Thermostat.cpp  Thermostat.h
src/Container/: BaseParticleContainer.h  LCParticleContainer.cpp  LCParticleContainer.h  ParticleContainer.cpp  ParticleContainer.h
src/LinkedCell/: Cell.cpp  Cell.h
src/Membrane/: Membrane.cpp  Membrane.h  MembranePair.cpp  MembranePair.h
src/Plots/: Ass5Task2StrategiesSpeedUp.cpp  Ass5Task5Diffusion.cpp  Ass5Task5RDF.cpp  RTCAss3Task2.cpp  Task2StrategiesSpeedUp.cpp  Task5Diffusion.cpp
src/RunTimeComparison/: RTCAss3Task2.cpp
src/images/: RunTimeComparison.cpp
src/input/: FileReader.h  XMLReader.cpp  XMLReader.h  simulation.cxx  simulation.hxx
src/inputReader/: FileReader.cpp  FileReader.h  OutputToInput.cpp  OutputToInput.h  XMLReader.cpp  XMLReader.h  simulation.cxx  simulation.hxx  simulation.xsd
src/output/outputWriter/: XYZWriter.cpp
src/outputWriter/: VTKWriter.cpp  XYZWriter.cpp  XYZWriter.h
src/test/: CalculationsTests.cpp  CellTest.cpp  LCParticleContainerTest.cpp  MembraneTest.cpp  MembraneTests.cpp  ParticleContainerTests.cpp  ParticleGeneratorTests.cpp  Tests.cc  ThermostatTests.cpp  firstTest.cc
src/utils/: EpsilonSigma.h
workflows/: ci.yml
